UI: Context based leading key shortcuts not working in enums/menus spawned from popups #107838

Closed
opened 2023-05-11 11:59:36 +02:00 by Simon Thommes · 3 comments
Member

System Information
Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-11 09:18, hash: 8e70ab990547
Worked: (newest version of Blender that worked as expected)

Short description of error
Screenshot from 2023-05-11 11-55-44.png

If the mouse is moved over one of the options it does work. When the mouse remains on the dropdown button it doesn't.

Exact steps for others to reproduce the error

  • Go to attribute panel
  • Press attribute add button
  • Press Domain (or Data Type) dropdown
  • Don't move the mouse from the button
  • Try to use one of the leading keys to change the enum element
**System Information** Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-11 09:18, hash: `8e70ab990547` Worked: (newest version of Blender that worked as expected) **Short description of error** ![Screenshot from 2023-05-11 11-55-44.png](/attachments/61316b4d-d0b4-46e8-9ca3-fd812d5b1642) If the mouse is moved over one of the options it does work. When the mouse remains on the dropdown button it doesn't. **Exact steps for others to reproduce the error** - Go to attribute panel - Press attribute add button - Press Domain (or Data Type) dropdown - Don't move the mouse from the button - Try to use one of the leading keys to change the enum element
Simon Thommes added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-11 11:59:37 +02:00
Member

Can confirm.

Can confirm.
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-11 13:56:38 +02:00
Member

I think this is true for all enum menus spawned from inside popups/popovers?

Other examples:

  • translate Cube > F9 (operator redo popup) > try to change Orientation that way
  • from Gizmos popover VIEW3D_PT_gizmo_display in the 3DView header, try to change Object Gizmos that way
I think this is true for all enum menus spawned from inside popups/popovers? Other examples: - translate Cube > F9 (operator redo popup) > try to change `Orientation` that way - from Gizmos popover `VIEW3D_PT_gizmo_display` in the 3DView header, try to change `Object Gizmos` that way
Philipp Oeser changed title from Context based leading key shortcuts not working in menus for attribute creation to UI: Context based leading key shortcuts not working in enums/menus spawned from popups 2023-05-12 13:19:26 +02:00
Author
Member

@ideasman42 Do you think you could look into this? I keep running into this issue with any popups that have enums.

@ideasman42 Do you think you could look into this? I keep running into this issue with any popups that have enums.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-19 03:31:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107838
No description provided.